@@ -1075,6 +1075,10 @@ To find the latest change quickly, search ==== :)
 - monsters drop what they've picked up before.
 [H] roguelike-keys support in do_cmd_skill()
 
+18/06/2002 (Jir)
+- Test code for transmitting races/classes when logging on.
+  we should separate types.h into two(server-client) or add some hack to
+  actually be able to change # of races/classes on the fly.
 
 
 
